# telegram-sender

./: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
migrations/: 20220907182047_init.sql  20230416133319_message_queue.sql  20230416140701_not_null_message_queue.sql
src/: api.rs  bot.rs  main.rs  state.rs
