[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
axum = "0.5.15"
base64 = "0.21.0"
bytes = "1.4.0"
chrono = "0.4.24"
dashmap = { version = "5.4.0", features = ["serde"] }
data-url = "0.2.0"
dotenv = "0.15.0"
futures = "0.3.24"
image = "0.24.5"
serde = "1.0.144"
serde_json = "1.0.85"
sqlx = { version = "0.6.3", features = ["offline", "runtime-tokio-rustls", "chrono", "postgres"]}
teloxide = { version = "0.12.0", default-features = false, features = ["macros", "rustls", "throttle"] }
tokio = { version = "1.21.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
